--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
         <a href="http://localhost/teste/ex3/ex3.php">Exercicio 3</a>
         <a href="http://localhost/teste/ex4/ex4.php">Exercicio 4</a>
         <a href="http://localhost/teste/ex5/ex5.php">Exercicio 5</a>
-        <a href="http://localhost/teste/ex6/formulario.php">Exercicio 6</a>
+        <a href="http://localhost/teste/ex6/formulario.html">Exercicio 6</a>
     </body>
 </html>
